[package]
name = "data-pipeline-m3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive"] }
regex = "1.12.3"
sanitize-filename = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = "2.5.8"
